# robs_awesome_python_template

./: .gitignore  AGENTS.md  LICENSE  README.md  cookiecutter.json
.agents/skills/template-testing/: SKILL.md
.github/prompts/: template-testing.prompt.md  upgrade-actions.prompt.md
.github/workflows/: test.yaml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: bare.yaml  full.yaml  library.yaml
{{cookiecutter.__package_slug}}/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .python-version  AGENTS.md  LICENSE  README.md  alembic.ini  compose.yaml  dockerfile.celery  dockerfile.qq  dockerfile.www  makefile  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.__package_slug}}/.agents/skills/aiocache/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/celery-tasks/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/docker-compose/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/fastapi-routes/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/jinja-templates/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/jinja-templates/references/: sandboxed-templates.md
{{cookiecutter.__package_slug}}/.agents/skills/makefile/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/pydantic-settings/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/python-testing/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/sqlalchemy-models/: SKILL.md
{{cookiecutter.__package_slug}}/.agents/skills/typer-cli/: SKILL.md
{{cookiecutter.__package_slug}}/.github/: dependabot.yml
{{cookiecutter.__package_slug}}/.github/workflows/: alembic.yaml  black.yaml  dapperdata.yaml  docker.yaml  isort.yaml  lockfiles.yaml  mypy.yaml  paracelsus.yaml  prettier.yaml  pypi.yaml  pytest.yaml  ruff.yaml  tomlsort.yaml
{{cookiecutter.__package_slug}}/db/: env.py
{{cookiecutter.__package_slug}}/docker/celery/: prestart.sh
{{cookiecutter.__package_slug}}/docker/www/: prestart.sh
{{cookiecutter.__package_slug}}/docs/dev/: README.md  api.md  cache.md  celery.md  cli.md  database.md  dependencies.md  docker.md  documentation.md  github.md  makefile.md  pypi.md  quasiqueue.md  settings.md  templates.md  testing.md
{{cookiecutter.__package_slug}}/tests/: conftest.py  test_celery.py  test_cli.py  test_qq.py  test_settings.py  test_www.py
{{cookiecutter.__package_slug}}/tests/services/: test_cache.py  test_jinja.py
{{cookiecutter.__package_slug}}/{{cookiecutter.__package_slug}}/: __init__.py  _version.py  celery.py  cli.py  qq.py  settings.py  worker.py  www.py
{{cookiecutter.__package_slug}}/{{cookiecutter.__package_slug}}/conf/: cache.py  db.py  settings.py
{{cookiecutter.__package_slug}}/{{cookiecutter.__package_slug}}/models/: conf.py
{{cookiecutter.__package_slug}}/{{cookiecutter.__package_slug}}/services/: cache.py  db.py  jinja.py
