[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
{{cookiecutter.__package_slug}} = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "{{cookiecutter.__package_slug}}/_version.py"

[project]
authors = [{"name" = "{{cookiecutter.author_name}}"}]
description = "A python library"
dynamic = ["version", "readme"]
license = {"file" = "LICENSE"}
name = "{{cookiecutter.__package_slug}}"

dependencies = [
{%- if cookiecutter.include_sqlalchemy == "y" %}
  "aiosqlite",
  "alembic",
  "asyncpg",
{%- endif %}
{%- if cookiecutter.include_celery == "y" %}
  "celery",
{%- endif %}
{%- if cookiecutter.include_dogpile == "y" %}
  "dogpile.cache",
{%- endif %}
{%- if cookiecutter.include_fastapi == "y" %}
  "fastapi",
{%- endif %}
{%- if cookiecutter.include_jinja2 == "y" %}
  "jinja2",
{%- endif %}
{%- if cookiecutter.include_sqlalchemy == "y" %}
  "psycopg2-binary",
{%- endif %}
  "pydantic",
{%- if cookiecutter.include_sqlalchemy == "y" %}
  "SQLAlchemy",
{%- endif %}
{%- if cookiecutter.include_celery == "y" %}
  "redis",
{%- endif %}
{%- if cookiecutter.include_cli == "y" %}
  "typer",
{%- endif %}
]

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "dapperdata",
  "glom",
  "isort",
  "mypy",
  "pip-tools",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "toml-sort",
]

{% if cookiecutter.include_cli == "y" %}
[project.scripts]
{{ cookiecutter.__package_slug }} = "{{ cookiecutter.__package_slug }}.cli:app"
{% endif %}

[tool.isort]
profile = "black"
skip = [".venv"]
src_paths = ["{{cookiecutter.__package_slug}}", "tests"]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
  )
)
'''
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
