[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
{{cookiecutter.__package_slug}} = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "{{cookiecutter.__package_slug}}/_version.py"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[project]
authors = [{"name" = "{{cookiecutter.author_name}}"}]
description = "{{cookiecutter.short_description}}"
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "{{cookiecutter.__package_slug}}"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

dependencies = [
{%- if cookiecutter.include_sqlalchemy == "y" %}
  "aiosqlite",
  "alembic",
  "asyncpg",
{%- endif %}
{%- if cookiecutter.include_celery == "y" %}
  "celery",
{%- endif %}
{%- if cookiecutter.include_aiocache == "y" %}
  "aiocache",
{%- endif %}
{%- if cookiecutter.include_fastapi == "y" %}
  "fastapi",
  "uvicorn[standard]",
{%- endif %}
{%- if cookiecutter.include_jinja2 == "y" %}
  "jinja2",
{%- endif %}
{%- if cookiecutter.include_sqlalchemy == "y" %}
  "psycopg2-binary",
{%- endif %}
  "pydantic~=2.0",
  "pydantic-settings",
{%- if cookiecutter.include_quasiqueue == "y" %}
  "QuasiQueue",
{%- endif %}
{%- if cookiecutter.include_sqlalchemy == "y" %}
  "SQLAlchemy",
{%- endif %}
{%- if cookiecutter.include_celery == "y" or cookiecutter.include_aiocache == "y" %}
  "redis",
{%- endif %}
{%- if cookiecutter.include_cli == "y" %}
  "typer",
{%- endif %}
]

[dependency-groups]
dev = [
  "build",
  "dapperdata",
  "glom",
  "greenlet",
{%- if cookiecutter.include_fastapi == "y" %}
  "httpx",
{%- endif %}
  "mypy",
{%- if cookiecutter.include_sqlalchemy == "y" %}
  "paracelsus",
{%- endif %}
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "tombi",
  "uv"
]

{% if cookiecutter.include_cli == "y" %}
[project.scripts]
{{ cookiecutter.__package_slug }} = "{{ cookiecutter.__package_slug }}.cli:app"
{% endif %}

[tool.ruff]
exclude = [".venv", "./{{cookiecutter.__package_slug}}/_version.py"]
line-length = 120

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./{{cookiecutter.__package_slug}}/_version.py",
  "./{{cookiecutter.__package_slug}}/__init__.py",
  "./tests/*",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.uv]
exclude-newer = "1 week"
