[metadata]
name = {{cookiecutter.package_name}}
description = A python library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = {{cookiecutter.__package_slug}}/_version.py
versionfile_build = {{cookiecutter.__package_slug}}/_version.py
tag_prefix = v

parentdir_prefix =

[options]
packages = find:
include_package_data = True
install_requires =
{%- if cookiecutter.include_sqlalchemy == "y" %}
  aiosqlite
  alembic
  asyncpg
{%- endif %}
{%- if cookiecutter.include_celery == "y" %}
  celery
{%- endif %}
{%- if cookiecutter.include_dogpile == "y" %}
  dogpile.cache
{%- endif %}
{%- if cookiecutter.include_fastapi == "y" %}
  fastapi
{%- endif %}
{%- if cookiecutter.include_jinja2 == "y" %}
  jinja2
{%- endif %}
{%- if cookiecutter.include_sqlalchemy == "y" %}
  psycopg2-binary
{%- endif %}
  pydantic
{%- if cookiecutter.include_sqlalchemy == "y" %}
  SQLAlchemy
{%- endif %}
{%- if cookiecutter.include_celery == "y" %}
  redis
{%- endif %}
{%- if cookiecutter.include_cli == "y" %}
  typer
{%- endif %}

[options.extras_require]
dev =
  black
  build
  glom
  isort
  mypy
  pip-tools
  pytest
  pytest-cov
  ruamel.yaml

[options.package_data]
{{cookiecutter.__package_slug}} = py.typed

{% if cookiecutter.include_cli == "y" %}
[entry_points]
console_scripts =
  {{ cookiecutter.__package_slug }} = "{{ cookiecutter.__package_slug }}.cli:app"
{% endif %}
